<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, agroAssistant!</string>
    <!-- General -->
    <string name="alert_dialog_ok">Ok!</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <!-- Home -->
    <string name="app_name">AgroAssistant</string>
    <string name="btn_home_farmer">Farmers</string>
    <string name="btn_home_farm">Farms</string>
    <string name="btn_home_crop">Crops</string>
    <string name="btn_home_price">Prices</string>
    <!-- Farmers Activity -->
    <string name="mnu_farmers_bar">Farmers</string>
        <string-array name="ary_farmers_main">
        <item>Farmer name / ID</item>
        <item>Parish, Extension or District</item>
        <item>My location</item>
        <item>Detailed Search</item>
    </string-array>
    <string-array name="ary_farms_main">
        <item>Farmer name / ID</item>
        <item>Parish, Extension or District</item>
        <item>Property ID</item>
        <item>My location</item>
        <item>Detailed Search</item>
    </string-array>
    <string-array name="ary_crops_main">
    	<item>Crop Group / Type</item>
    	<item>Parish, Extension or District</item>
        <item>Farmer name / ID</item>
        <item>Property ID</item>
        <item>My location</item>
        <item>Detailed Search</item>
    </string-array>
	    <!-- Farmers Search Activity -->
	    <string name="fname_title">Farmer Search</string>
	    <string name="edt_fSearch">Enter farmer name or ID</string>
	    <string name="pid_title">Property ID</string>
	    <string name="farmerHint">Enter farmer name or farmer ID</string>
	    <string name="rdo_fname">Farmer name</string>
	    <string name="rdo_fid">Farmer ID</string>
	    <string name="area_title">Parish, Extension or District</string>
	    <string name="rdo_parish">Parish</string>
	    <string name="rdo_extension">Extension</string>
	    <string name="rdo_district">District</string>
	    <string name="btn_search">Search</string>
	    
	    <!-- Location Search -->
	    <string name="mnu_location_bar">My Location</string>
	    <string name="btn_location_refresh_message">Fetching User Location</string>
	    
    <!-- Prices Activity -->
    <string name="mnu_prices_bar">Prices</string>
    <!-- Prices Activity -->
    <string-array name="ary_prices_main">
        <item>Crop by Parish</item>
        <item>Crop by Price</item>
        <item>My location</item>
        <item>Detailed Search</item>
    </string-array>
    	<!-- Crop Search -->
    	 <string name="crop_title">Crop search</string>
    	 <string name="cropHint">Enter crop name or crop group</string>
    	 <string name="rdo_cropType">Crop type</string>
	    <string name="rdo_cropGroup">Crop group</string>
	    
	    <!-- Parish Search -->
	    <string name="parish_title">Parish search</string>
	    <string name="parishes">Choose a parish</string>
	    <string-array name="parishes_array">
	        <item>Kingston</item>
	        <item>St.Andrew</item>
	        <item>St.Catherine</item>
	        <item>Clarendon</item>
	        <item>Manchester</item>
	        <item>St.Elizabeth</item>
	        <item>Westmoreland</item>
	        <item>Hanover</item>
	        <item>St.James</item>
	        <item>Trelawny</item>
	        <item>St.Ann</item>
	        <item>St.Mary</item>
	        <item>Portland</item>
	        <item>St.Thomas</item>
	</string-array>
	<string name="FARMS_QUERY_URL">http://www.data.org.jm/api/farms.xml</string>
    <string name="CROPS_QUERY_URL">http://www.data.org.jm/api/crops.xml</string>
    <string name="PRICES_QUERY_URL">http://www.data.org.jm/api/prices.xml</string>    
	
	<string name="mnu_result_bar">Result Search</string>    
	
	<string name="user_name">User Name</string>    
	
	<string name="usernameSummary">Please enter your username</string>    
	
	<string name="user_pass">Password</string>    
	
	<string name="userpasswordSummary">Enter user password</string>    
	
	<string name="apiKey">API Key</string>    
	
	<string name="apiKey_summary">Enter user API key</string>	   
	
	<string name="titlePrefs">Preferences</string>
	
	<string name="titleAbout">About</string>
	
	 
</resources>