<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/area_search"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
	android:paddingLeft="15dp" android:paddingRight="15dp">
	<TextView android:id="@+id/area_search_title"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/area_title" android:textSize="18sp"
		android:paddingTop="5dp" android:paddingBottom="10dp">
	</TextView>
	<AutoCompleteTextView android:id="@+id/edt_area_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Enter area name" android:textSize="12sp"
        />
    <!--     
	<EditText android:id="@+id/edt_area_search"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:hint="Enter area name" android:textSize="12sp">
	</EditText>
	 -->
	<RadioGroup android:id="@+id/rdgrp_asearch"
		android:layout_width="wrap_content" android:layout_height="wrap_content">
		<RadioButton android:id="@+id/rdo_parish"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/rdo_parish">
		</RadioButton>
		<RadioButton android:id="@+id/rdo_extension"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/rdo_extension">
		</RadioButton>
		<RadioButton android:id="@+id/rdo_district"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/rdo_district">
		</RadioButton>
	</RadioGroup>
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button android:id="@+id/btn_area_search" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/btn_search"
			android:layout_alignParentRight="true">
		</Button>
	</RelativeLayout>
</LinearLayout>
