<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:padding="6dip">
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button android:id="@+id/action_farmer"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:onClick="onActionOneClick"
            android:text="@string/btn_home_farmer"
            android:drawableTop="@drawable/ic_home_farmer"/>
        <Button android:id="@+id/action_two_button"
       		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:onClick="onActionTwoClick"
            android:text="@string/btn_home_farm"
            android:drawableTop="@drawable/ic_home_farm"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button android:id="@+id/action_three_button"
       		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:onClick="onActionThreeClick"
            android:text="@string/app_name" 
            android:drawableTop="@drawable/ic_home_crop"/>
        <Button android:id="@+id/action_four_button"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:onClick="onActionFourClick"
            android:text="@string/btn_home_price"
            android:drawableTop="@drawable/ic_home_price"/>
    </LinearLayout>   
</LinearLayout>