<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/crop_parish_main"
	android:layout_width="200dp" android:layout_height="wrap_content"
	android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
	android:paddingLeft="15dp" android:paddingRight="15dp">
	
	<TextView android:id="@+id/crop_search_title"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/crop_title" android:textSize="18sp"
		android:paddingTop="5dp" android:paddingBottom="5dp">
	</TextView>
	
    <View android:layout_height="2px" android:layout_width="fill_parent"
		android:layout_marginTop="5dp" 
		android:paddingTop="2dp" android:paddingBottom="2dp"
		android:background="#90909090" />
	
	<TextView android:id="@+id/area_space"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="" android:textSize="5sp"/>
	
	<AutoCompleteTextView android:id="@+id/edt_crop_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cropHint" android:textSize="12sp"
        />
    <!-- 
	<EditText android:id="@+id/edt_crop_search" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:hint="@string/cropHint"
		android:textSize="12sp">
	</EditText>
	 
	<RadioGroup android:id="@+id/rdgrp_csearch"
		android:layout_width="wrap_content" android:layout_height="wrap_content">
		<RadioButton android:id="@+id/rdo_cropType"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/rdo_cropType">
		</RadioButton>
		<RadioButton android:id="@+id/rdo_cropGroup"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/rdo_cropGroup">
		</RadioButton>
	</RadioGroup>
	-->
	<TextView android:id="@+id/crop_area_search_input"
		android:layout_width="wrap_content" android:layout_height="wrap_content" 
		android:layout_marginTop="10dip"
        android:text="@string/parishes">
	</TextView>
	<Spinner 
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/parishes"
    />
	
	<View android:layout_height="2px" android:layout_width="fill_parent"
		android:layout_marginTop="5dp" 
		android:paddingTop="5dp" android:paddingBottom="5dp"
		android:background="#90909090" />
    
	<RelativeLayout android:layout_width="fill_parent" android:paddingTop="5dp"
		android:layout_height="wrap_content">
		<Button android:id="@+id/btn_crop_search" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/btn_search"
			android:layout_alignParentRight="true">
		</Button>
	</RelativeLayout>
</LinearLayout>
